[package]
name = "bluescale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.1", features = ["bluetoothd"] }
dbus = { version = "0.9", features = ["futures"], optional = true }
dbus-tokio = { version = "0.7", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
futures = "0.3"
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["net", "io-util"] }
tokio-stream = { version = "0.1", optional = true }
hex = { version = "0.4" }
lazy_static = { version = "1", optional = true }
uuid = { version = "1", features = ["v4"] }
strum = { version = "0.24", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.3"
libc = "0.2"
nix = { version = "0.24", default-features = false, features = ["ioctl"] }
custom_debug = { version = "0.5", optional = true }
displaydoc = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bitops = "0.1.0"
chrono = "0.4"
postgres = { version="0.19.4", features = ["with-chrono-0_4"] }
beep = "0.3.0"
env_logger = "0.9"
rust-ini = "0.10.3"
log = "0.4.1"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
clap = { version = "3.0.13", features = ["derive"] }
